# data_cleansing_automation

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  dockerfile  load.py  main.py  pipeline.py  pyproject.toml  requirements.txt  transformation.py
data/: dados_limpos.csv
src/ETL/: load.py  pipeline.py  transformation.py
src/ETL/data/: dados_limpos.csv
templates/: index.html
