[project]
name = "clear-data"
version = "0.1.0"
description = ""
authors = [
    {name = "hudson_silverio",email = "hudsonpksj@gmail.com"}
]
readme = "README.md"
requires-python = "3.12.1"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "streamlit (>=1.42.2,<2.0.0)",
    "flask (>=3.1.0,<4.0.0)",
    "flask-socketio (>=5.5.1,<6.0.0)",
    "dask (>=2025.2.0,<2026.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


